[package]
name = "ttt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
smallvec = "1"

serde = { version = "1", features = ["derive"]}
ron = "0.8"

skia-safe = { version = "*", features = ["gl", "textlayout"] }
gl = "*"
glutin = "*"
glutin-winit = "*"
winit = "*"
raw-window-handle = "0.5.0"

ropey = "1"
url = "2"
